# EasyADB

./: .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vitest.config.ts
.agent/rules/: cocukoyuncagi.md  ufaktefekrules.md
docs/architecture/: ARCHITECTURE.md
docs/archive/: IMPLEMENTATION_PLAN.md  hybrid-backup-support.md  progress-bar.md  rename-to-easyadb.md  universal-backup-support.md
docs/debug/: debug-methodology.md  debug-roadmap.md  debug-terminal-history.md
docs/design/: ADB_UI.md  ADB_UI_SPEC.md  UI_UX_Overhaul_Plan.md
docs/notes/: PROGRESS_REPORT.md  fikirler.md
docs/planning/: ROADMAP.md
docs/plans/: ROADMAP.md  debug-backup-module.md  debug-plan.md  fikirler.md  file-explorer-plan.md  logcat-plan.md
docs/project/: CHANGELOG.md  PROJECT_DEFINITION.md
docs/specs/: ARCHITECTURE.md
docs/ui-ux/: ADB_UI.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: knowledge_base.json
src-tauri/capabilities/: default.json
src-tauri/src/: adb.rs  device_cache.rs  lib.rs  package_db.rs  seed_data.rs
src/components/: ErrorBoundary.tsx  Header.tsx  LogPanel.tsx  SelectionHeader.tsx  Sidebar.tsx  TitleBar.tsx
src/components/layout/: IconRail.tsx  (+1 more)
src/context/: AppContext.tsx
src/data/: package-db.ts
src/hooks/: useBackupOperations.ts  useBackups.ts  useDebloater.ts  useDeviceStatus.ts  usePackages.ts  usePerformanceMetrics.ts  useTerminal.ts
src/lib/: errorAnalyzer.ts  feedback.ts  utils.ts
src/test/: setup.test.tsx
src/types/: adb.ts
(+14 files in other folders)
