[package]
name = "easy-adb"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["image-png", "image-ico"] }
tauri-plugin-log = "2"
zip = "4.2.0"
dirs = "6.0.0"
chrono = "0.4.43"
reqwest = { version = "0.13.1", features = ["blocking", "json"] }
scraper = "0.25.0"
tauri-plugin-shell = "2.3.4"
regex = "1.12.2"
